k8s/namespace.yml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moto-app
