k8s/flask-service.yaml
---
# flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: moto-app
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
