k8s/mariadb-service.yaml
---
# mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: moto-app
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
  clusterIP: None
